# wizard

./: Cargo.toml  README.md
src/: main.rs
src/cli/: greeting.rs  mod.rs  phoenix.rs  rails.rs  traits.rs
src/cli/docker/: compose.rs  mod.rs  utils.rs
